--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "offcanvas": "^3.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-scrollspy-nav": "^1.3.0",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "react-ui-scrollspy": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
