--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "cli-cursor": "^5.0.0",
     "offcanvas": "^3.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
